# ComfyUI-GetWorkflowName

./: __init__.py  get_workflow.py  pyproject.toml
web/js/: filename.js
