[project]
name = "getworkflowname"
description = "Adds a node that outputs the workflow's name as a string"
version = "1.1.1"
license = {file = "LICENSE"} 
classifiers = [
    "Operating System :: OS Independent",
 ]


[project.urls]
Repository = "https://github.com/jKaarlehto/ComfyUI-GetWorkflowName"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/jKaarlehto/ComfyUI-GetWorkflowName/wiki"
"Bug Tracker" = "https://github.com/jKaarlehto/ComfyUI-GetWorkflowName/issues"

[tool.comfy]
PublisherId = "jkaarlehto"
DisplayName = "ComfyUI-GetWorkflowName"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

